--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,11 @@ name: Deploy to netlify
 
 on:
   workflow_dispatch:
+    inputs:
+      deploy-netlify:
+        description: Enable Netlify deployment
+        type: boolean
+        default: true
 
 jobs:
   build:
@@ -25,6 +30,7 @@ jobs:
 
       - name: Deploy to netlify
         uses: nwtgck/actions-netlify@v3.0.0
+        if: ${{ inputs.deploy-netlify }}
         with:
           publish-dir: './dist'
           production-branch: master
