--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,17 +8,21 @@ env:
   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 
+#on:
+#  workflow_dispatch:
+#    inputs:
+#      deploy-netlify:
+#        description: Enable Netlify deployment
+#        type: boolean
+#        default: true
+#      deploy-vercel:
+#        description: Enable Vercel deployment
+#        type: boolean
+#        default: false
 on:
-  workflow_dispatch:
-    inputs:
-      deploy-netlify:
-        description: Enable Netlify deployment
-        type: boolean
-        default: true
-      deploy-vercel:
-        description: Enable Vercel deployment
-        type: boolean
-        default: false
+  push:
+    branches:
+      - master
 
 jobs:
   build:
